--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5091,10 +5091,10 @@ ww1_romania.2.a:0 "We'll get it done!"
 ww1_romania.4.t:0 ""The Brătianu Land Reform Bill - Convincing the PCD"
 ww1_romania.4.d:0 "The current make up of Romanias parliament means that convincing moderates to support the land reform bill will be required to pass it. Several members from the PCD, a splinter from the more conservative PC, seems somewhat open to the land reform bill we've proposed. Some do fear its a bit too extreme, but changing the bill at all may risk angering the more liberal members of our party, who may protest vote against the bill. What will our next course be?"
 ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its own §Rconsequences§!!"
- ww1_romania.3.t:0 ""The Brătianu Land Reform Bill - Landlords Petition the Government"
- ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliament. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill altogether. While they don't hold votes in parliament, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
- ww1_romania.3.a:0 "Have they forgotten about 1907 so quickly? Onwards with the bill!"
- ww1_romania.3.b:0 "They have some points, we can pick this up when the situation is more stable."
+ww1_romania.3.t:0 ""The Brătianu Land Reform Bill - Landlords Petition the Government"
+ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliament. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill altogether. While they don't hold votes in parliament, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
+ww1_romania.3.a:0 "Have they forgotten about 1907 so quickly? Onwards with the bill!"
+ww1_romania.3.b:0 "They have some points, we can pick this up when the situation is more stable."
 ww1_romania.4.a:0 "Lets twist some arms"
 ww1_romania.4.b:0 "They're apart of our coalition, we can trust them"
 ww1_romania.4.c:0 "Offer the PCD significant say in our coalition if we win the next elections"
@@ -5273,15 +5273,15 @@ ROM_his_majestys_influence_desc:0 "While Romania does have a parliament, King Ca
 ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
 ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carps new government. While we'd usually be fine with these retards fucking off, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
 ROM_law_on_mobilization:0 "Law On Mobilization"
- ROM_study_enemy_cartography:0 "Study Enemy Cartography"
- ROM_general_directorate_of_munitions:0 "The General Directorate of Munitions"
- ROM_expansion_of_the_officer_corp:0 "Expand the Officer Corps"
- ROM_build_a_domesic_arms_industry:0 "An Issue of National Security"
- ROM_beggers_cant_be_chosers:0 "Beggars Can't Be Choosers"
+ROM_study_enemy_cartography:0 "Study Enemy Cartography"
+ROM_general_directorate_of_munitions:0 "The General Directorate of Munitions"
+ROM_expansion_of_the_officer_corp:0 "Expand the Officer Corps"
+ROM_build_a_domesic_arms_industry:0 "An Issue of National Security"
+ROM_beggers_cant_be_chosers:0 "Beggars Can't Be Choosers"
 ROM_a_common_divison_structure:0 "A Common Division Structure"
 ROM_restructure_the_high_command:0 "Reshuffle the High Command"
 ROM_training_schools:0 "Open Up Training Schools"
- ROM_autonomous_army_structure:0 "Autonomous Army Structure"
+ROM_autonomous_army_structure:0 "Autonomous Army Structure"
 ROM_political_unity:0 "War-Time Coalition"
 ROM_psychological_warfare:0 "Phychological Warfare"
 ROM_continue_democratization:0 "Continue Democratisation"
@@ -5295,15 +5295,12 @@ ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can h
 ww1_romania.49.t:0 "1911 Elections - PNL Holds on"
 ww1_romania.49.d:0 "While it was closer then we would have liked, the results for the 1911 elections are in, and we've mantained a slight majority in parliament. With this, our mandate has been revived and we can now turn towards governing."
 ww1_romania.49.a:0 "Expected, of course!"
-
 ww1_romania.50.t:0 "1911 Elections - The PC Flips Parliament"
 ww1_romania.50.d:0 "It wasn't the result we hoped for, but the PC has won enough precentage of the vote to capture a plurality in parliament. With this, King Carol has appointed Petre Carp to form a government. "
 ww1_romania.50.a:0 "We will come back at some point!"
-
 ww1_romania.51.t:0 "1911 Elections - No Party Can Form a Government"
 ww1_romania.51.d:0 "The election results are in, and the results are so close that neither party has a plurality large enough to form a governing coalition. With this, the King and the PCD have entered talks to allow a compromise government, ran by them. Thus, the PCD will be forming a government"
 ww1_romania.51.a:0 "Better then the PC, atleast!"
-
 ROM_moderate_pnl:0 "The §mPCD§! has too much say in our coalition to make such drastic changes"
 ROM_populist_rhetoric:0 "Populist Rhetoric"
 ROM_consolidate_support_amongst_rural_areas:0 "Consolidate Support in Rural Romania"
@@ -5332,7 +5329,7 @@ ww1_romania.45.a:0 "Take these accusations head on"
 ww1_romania.45.b:0 "Just deflect, deflect, and deflect."
 pnl_standing_improve:0 "The §lPNL's§! standings in the election will improve"
 pc_standing_improve:0 "The §cPC's§! standings in the election will improve"
-	ROM_vast_political_promises:0 "Vast Political Promises"
+ROM_vast_political_promises:0 "Vast Political Promises"
 ROM_religious_tolerance:0 "Religious Tolerance"
 ROM_the_uniting_principal:0 "The Uniting Principals"
 ww1_romania.44.t:0 "King Carol Demands New Elections"
@@ -5392,9 +5389,9 @@ ROM_the_new_constitution:0 "Hostile Takeover of the PNL"
 ROM_the_new_constitution_desc:0 "With the failure of land reform the call for new leadership grows within the PNL. Progress is a moving train, but it seems as if the current leadership offers no fuel to keep the train moving. New alternatives are being sough from all corners of the party. One, though, makes a better case than most. Constantin Stere is an advocate for reform and liberalization, positions that are sure to bring popularity to the party. Perhaps he is the one who we should try our luck with."
 ROM_a_unifying_figure_head:0 "Pursue Full Male Suffrage"
 ROM_a_unifying_figure_head_desc:0 "It is high time for every man in this country to have the ability to vote. This will ensure that the process is as democratic as possible, and if we stay popular it will also ensure that we win election after election. Stere has put the proposal forward to parliament and while it may ruffle some feathers among the more conservative members, it is sure to pass with the support he currently enjoys. Long live Romanian democracy!"
- ww1_romania.56.t:0 "Internal Coup of the PNL"
- ww1_romania.56.d:0 "The PNL has long had internal divisions, mainly between those who disagree on just how far reform needs to go. Constantin Stere has long been a proponent of an extensive committee on land reform, full male suffrage, a new constitution, and has even flirted with the idea of giving Women the right to vote as well. On the contrary, Ion Bratianu, the current leader of the PNL, has given lip service to these issues at best. With a new PNL government recently being installed, a battle of power began behind the scenes.\n\nIt seems that Stere has won this conflict, as today the PNL forced Bratianu to stand down in favor of Stere at risk of a party splinter. With this, the King has accepted Bratianu's resignation and Stere will now have to see if he can live up to his promises."
- ww1_romania.56.a:0 "Let's get into action!"
+ww1_romania.56.t:0 "Internal Coup of the PNL"
+ww1_romania.56.d:0 "The PNL has long had internal divisions, mainly between those who disagree on just how far reform needs to go. Constantin Stere has long been a proponent of an extensive committee on land reform, full male suffrage, a new constitution, and has even flirted with the idea of giving Women the right to vote as well. On the contrary, Ion Bratianu, the current leader of the PNL, has given lip service to these issues at best. With a new PNL government recently being installed, a battle of power began behind the scenes.\n\nIt seems that Stere has won this conflict, as today the PNL forced Bratianu to stand down in favor of Stere at risk of a party splinter. With this, the King has accepted Bratianu's resignation and Stere will now have to see if he can live up to his promises."
+ww1_romania.56.a:0 "Let's get into action!"
 ROM_the_house_always_wins:0 "The House Always Wins"
 ROM_the_house_always_wins_desc:0 "The King has decided that the charade of constantly shifting parties will end, as he is now backing the PCD entirely. With our mandate secured, now is the time to make moves that we couldn't do beforehand."
 ROM_mandatory_insurance:0 "Mandatory Insurance"
@@ -5402,8 +5399,8 @@ ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions w
 ROM_social_conservative_principal:0 "Social Conservative Principal"
 ROM_social_conservative_principal_desc:0 ""
 ROM_take_ionescu:0 "Take Ionsecu"
- ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
- ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing."
+ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
+ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing."
 ROM_from_the_top_down:0 "Encourage Foreign Investment"
 ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy does best. We need to continue industrialization, to create more low skill, medium pay factory jobs for the population. To do this, we should offer lucrative tax cuts to foreign companies wishing to invest in romania."
 ROM_land_reform_pass:0 "§YLand Reform Bill§! has §GPassed§!"
@@ -5565,8 +5562,6 @@ house_win.tt:0 "The King will change course, fully endorsing our government and 
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
 ROM_homefront:0 "Homefront"
-
-
 ROM_secure_the_peasants:0 "Secure the Peasants"
 ROM_secure_the_party:0 "Secure the Party"
 ROM_secure_the_elites:0 "Secure the Elites"
@@ -5770,7 +5765,7 @@ ww1_romania.87.a:0 "Great... wait, what?"
 ROM_dismantle_transylvanian_councils:0 "Dismantle Transylvanian Councils"
 ROM_joint_land_reform_efforts:0 "Joint Land Reform Efforts"
 ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
-
+ROM_stimulate_the_economy:0 "Stimulate the Economy"
 
 
 #custom tooltips
