--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5126,9 +5126,9 @@ ww1_romania.26.t:0 "Mass Resignations"
 ww1_romania.26.d:0 "In protest of Carps government, many in parliament have resigned, demanding Carp do the same. They claim they cannot, in good faith, work with such a corrupt government. With this, the king has clearly lost faith in our government. Its going to take a miracle to stay in power at this point, thats for sure"
 ww1_romania.26.a:0 "They're overreacting!"
 ww1_romania.25.t:0 "The Unholy Alliance"
-ww1_romania.25.d:0 "An unexpected ally has arrised to Carps authoritarian, conservative government: democratic socialists. Seeing Carps policies as benefiting to factory workers, these socialists have been taking to the street in counter protests in favor of Carp. While not a huge group, their support is certainly welcome."
+ww1_romania.25.d:0 "An unexpected ally has arrived to Carps authoritarian, conservative government: democratic socialists. Seeing Carps policies as benefitting factory workers, these socialists have been taking to the street in counter protests in favor of Carp. While not a huge group, their support is certainly welcome."
 ww1_romania.24.t:0 "The Traitor Conservatives"
-ww1_romania.24.d:0 "Several in the conservative party, opposed to Carp, have joined the PNL protests against the government. Agreeing the Carp is a threat to democracy, they've called for Carp to resign immediantly. With the streets full of protesters, it seems our government may be coming to an end. Unless we are able to ride this storm, the king will certainly dismiss our government."
+ww1_romania.24.d:0 "Several in the conservative party, opposed to Carp, have joined the PNL protests against the government. Agreeing the Carp is a threat to democracy, they've called for Carp to resign immediately. With the streets full of protesters, it seems our government may be coming to an end. Unless we are able to ride this storm, the king will certainly dismiss our government."
 ww1_romania.23.t:0 "Mass Protests on the Streets"
 ww1_romania.23.d:0 "With our refusal to resign, the PNL has organized mass protests against our government. Rioting has broken out in Bucharest with tens of thousands demanding the PC step down from power. With this, the King has increasingly began weighing his options. Its clear the king is increasingly seeing us as unable to govern, and if we don't fix this issue soon we see our government collapse!"
 ww1_romania.22.t:0 "High Courts Find No Wrong Doings From Tramcar Society"
@@ -5137,7 +5137,7 @@ ww1_romania.22.a:0 "We'll shut down this corrupt court soon enough!"
 ww1_romania.21.t:0 "Shutting Down the Tramcar Society"
 ww1_romania.21.d:0 "The PNL is famously corrupt, corrupt to the core. We are better safer then sorry on the issue of corruption, and thus we must be vigilant. The 'Tramcar Society' has openly supported the PNL multiple times, and there are many rumors that they have illegally embezzled money for the PNL. Thus, we shall forefully dissolve this corrupt institution."
 ww1_romania.21.a:0 "Good! We must continue actions like this"
-ww1_romania.29.t:0 "An Oppurtunity"
+ww1_romania.29.t:0 "An Opportunity"
 ww1_romania.29.a:0 "Join"
 ww1_romania.30.t:0 "Anglo-Italian Banks Withdraw"
 ww1_romania.30.a:0 "Whatever."
@@ -5229,8 +5229,8 @@ ROM_you_think_you_just_fell_out_of_a_coconut_tree:0 "The Great Enlightenment"
 ROM_you_think_you_just_fell_out_of_a_coconut_tree_desc:0 ""
 ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
-ww1_romania.58.t:0 "Carol II joins the Romanian Senate"
-ww1_romania.58.d:0 "As guarenteed by the Romanian constiution, Carol II, son of king Ferdinand, has became a member of Romanias parliament. While not joining any political party in particular, Carol has shown to allign with conservative and nationalist elements of Romanias politics, even being friendly with the radical PND."
+ww1_romania.58.t:0 "Prince Carol joins the Romanian Senate"
+ww1_romania.58.d:0 "As guaranteed by the Romanian constiution, Prince Carol, son of king Ferdinand, has became a member of Romanias parliament. While not joining any political party in particular, Carol has shown to allign with conservative and nationalist elements of Romanias politics, even being friendly with the radical PND."
 ww1_romania.58.a:0 "Lets give him a warm welcome!"
 ROM_new_elites.tt:0 "Tthe §YNational Spirit§! this focus grants will be strengthened at §Y50.00%§!, §Y60.00%§!, and §Y70.00%§! §3Democratic§! support"
 ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
@@ -5321,8 +5321,8 @@ ww1_romania.46.b:0 "Lets see if we can try to flip some highly educated urban vo
 disable_htopnl:0 "§RDisables§! national focus: '§YHostile Takeover of the PNL§!'"
 ROM_election_russik_style:0 "We will manage the §lPNL§! election campaign. We will make a variety of choices on our campaign strategy, depending on what we do, we may win or lose the elections. §RWe will not be directly told the results of our decisions, so choose wisely§!"
 ww1_romania.52.t:0 "Austria Rejects Request for Bukovina"
-ww1_romania.52.d:0 "After being briefly considered in Hungarian parliment, Austria-Hungary has refused our request for bukovina in exchange for formally joining the central powers."
-ww1_romania.52.a:0 "Damn Hungarians"
+ww1_romania.52.d:0 "After being briefly considered in the Imperial Council, Austria-Hungary has refused our request for bukovina in exchange for formally joining the Central Powers."
+ww1_romania.52.a:0 "Damn Austrians"
 ww1_romania.45.t:0 "PC Attacks our Government as Corrupt"
 ww1_romania.45.d:0 "The PC has launched several attack campaigns against our government poiting out incidents of corruption or nepotism amongst the cabinet. This is a damaging attack that is decreasing our support nation wide, and we must respond. How will we?"
 ww1_romania.45.a:0 "Take these accusations head on"
@@ -5331,7 +5331,7 @@ pnl_standing_improve:0 "The §lPNL's§! standings in the election will improve"
 pc_standing_improve:0 "The §cPC's§! standings in the election will improve"
 ROM_vast_political_promises:0 "Vast Political Promises"
 ROM_religious_tolerance:0 "Religious Tolerance"
-ROM_the_uniting_principal:0 "The Uniting Principals"
+ROM_the_uniting_principal:0 "The Uniting Principles"
 ww1_romania.44.t:0 "King Carol Demands New Elections"
 ww1_romania.44.d:0 "With our government having exhausted the last of its political capital by pushing through the recent land reform bill, King Carol has been pushing us to announce new elections to shakeup the Romanian government. While the election looks to be dead heat so far, if we win a large majority it could give us a new mandate to push through additional reforms, thus agreeing to hold new elections is our only choice. Although we are relatively popular, the conservatives until Petre Carp have been reorganizing, moving to the left on many economic issues. They threaten to outflank our leftist base on several issues, which could collapse our shakey coalition. If we want to win this election, we're going to have to thread the needle between mantaining our base and appealing to the center."
 ww1_romania.44.a:0 "We look foward to expanding our majority in parliament!"
@@ -5342,7 +5342,7 @@ ROM_romania_for_those_who_earn_it:0 "Romania For Those Who Earn It"
 ROM_those_who_are_often_forgotten:0 "Those Who Are Often Forgotten"
 ROM_cut_government_bloat:0 "Cut Government Bloat"
 right_wing_populist:0 "Right Wing Populist"
-ROM_the_crowned_jewl:0 "The Crowned Jewel"
+ROM_the_crowned_jewl:0 "The Crown Jewel"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
@@ -5353,11 +5353,9 @@ ww1_romania.40.d:0 "While already signed a defensive pact with us and [GER.GetNa
 ww1_romania.40.a:0 "This is unacceptable!"
 ww1_romania.40.b:0 "We don't have a use for Bukovina anyways"
 ww1_romania.75.t:0 "[AUH.GetName] agrees to cede Bukovina to us!"
-ww1_romania.75.d:0 "[AUH.GetName] has agreed to cede Bukovina to us in exchange of us joining the Central Powers."
+ww1_romania.75.d:0 "[AUH.GetName] has agreed to cede Bukovina to us in exchange for us joining the Central Powers."
 ww1_romania.75.a:0 "Fantastic."
 ww1_romania.76.t:0 "[AUH.GetName] refuses to cede Bukovina"
-ww1_romania.76.d:0 "[AUH.GetName] announced today to our ambassador that ceding Bukovina would anger the Hungarian population."
-ww1_romania.76.a:0 "Hey... Uncool."
 ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
@@ -5371,7 +5369,7 @@ ww1_romania.27.d: "King Carol I, the ruler of Romania since it's entire history 
 ww1_romania.27.a:0 "Să-i fie țărâna ușoară."
 ww1_romania.27.a:0 "Long live king Ferdinand."
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
-ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on sundays, is mostly inspired by Christs teachings. While Christains are free to follow this principle, it shouldn't be forced on everyone."
+ROM_overturn_the_blue_law_desc:0 "Separation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on Sundays, is mostly inspired by Chris's teachings. While Christians are free to follow this principle, it shouldn't be forced on everyone."
 pcd_leader:0 "Member of the §mPCD§!"
 pcd_member:0 "Member of the §mPCD§!"
 pcd_leader2:0 "Member of the §mPCD§!"
@@ -5417,11 +5415,11 @@ ww1_romania.84.t:0 "A Dissapointing Peace Treaty"
 ww1_romania.84.d:0 "The Prime Minister has officially resigned after failing to obtain Banat in negotiations. Despite recieving nearly all of Romania's claims, Bratianu, at the head of the delegation to Paris, decided that rather than accept compromise with the Kingdom of Serbs, Croats, and Slovenes he would give up entirely and let a new Prime Minister see what he can do. This stubborn attitude has been made clear to be unwanted by the rest of government during a time of national rejuvenation after union with Transylvania, Bukovina, and Bessarabia. Truly an unnecessary gesture when compromise could have made things so much easier."
 ww1_romania.84.a:0 "What a letdown."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
-ROM_law_on_southern_dobruja_desc:0 ""
+ROM_law_on_southern_dobruja_desc:0 "Witth our recent conquest of Southern Dobruja, another step towards the great project of Greater Romania has been achieved. However, we must decide how the region will be governed, as well as how the Bulgarian and Turkish populations will be treated."
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
-ROM_encourage_romanian_migration_dobruja_desc:0 "If we encourage migration to Dobruja, we can Romanianize the area and thus make it Romanian."
+ROM_encourage_romanian_migration_dobruja_desc:0 "Dobruja is a diverse region, with a large population of not only Romanians but Bulgars, Turks, Greeks and even a small population of Germans. Encouraging settlement by Romanians to the region would tip demographics in our favour."
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
-ROM_concessions_to_muslim_romanians_desc:0 ""
+ROM_concessions_to_muslim_romanians_desc:0 "In Dobruja there exists a large population of Muslims, mostly Turkish, whose percentage of the Dobrujan population has only increased with the annexation of Southern Dobruja from Bulgaria. Guaranteeing religious freedom and linguistic rights would not only give us a pillar of support in the region, but improve relations with the Sublime Porte as well."
 ROM_dreams_of_a_great_romania:0 "Dreams of a Greater Romania"
 ROM_dreams_of_a_great_romania_desc:0 "There is a lot of land currently controlled by other countries that should really belong to us. If we wish to reclaim it, we will need to bolster our military as well as our foreign relations with countries who may server our interests in claiming land from our neighbors."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
@@ -5466,19 +5464,19 @@ ROM_the_great_war_redux_desc:0 "Once again, France and Germany are engaging in a
 ROM_our_call_to_arms:0 "Our Call to Arms"
 ROM_our_call_to_arms_desc:0 ""
 ROM_claim_bessarabia:0 "Claim Bessarabia"
-ROM_claim_bessarabia_desc:0 ""
+ROM_claim_bessarabia_desc:0 "Bessarabia was a core part of the Principality of Moldavia, until it was snatched away by the Russians in 1812. While part of it was regained after the Crimean War, we were forced to cede the land in exchange for recognition of our independence by the Tsar. As an integral part of Moldavia, it is imperative the region is retaken from the Russian yoke."
 ROM_crush_pro_entente_protesters:0 "Crush Pro-Entente Protesters"
 ROM_crush_pro_entente_protesters_desc:0 ""
 ROM_abandon_the_central_powers:0 "Abandon the Central Powers"
-ROM_abandon_the_central_powers_desc:0 ""
+ROM_abandon_the_central_powers_desc:0 "While Romania has been an unofficial member of the Triple Alliance since 1883, membership has always been kept a secret from the public. Issues with Vienna over minority rights in Transylvania, and growing ties with France mean we now have little reason to renew the alliance."
 ROM_our_piece_of_the_pie:0 "Our Piece of the Pie"
 ROM_our_piece_of_the_pie_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
-ROM_stir_anti_austrianism_desc:0 ""
+ROM_stir_anti_austrianism_desc:0 "Austria has long been an enemy of the Romanian people. They stole Bukovina from Moldavia, occupied us several times and in co-operation with the Hungarians, unleashed further oppression on Transylvianian Romanians when they petitioned the Austrian Kaiser for autonomy. Romania cannot be whole until Transylvania is free."
 ROM_turn_west:0 "Turn West"
 ROM_turn_west_desc:0 ""
 ww1_romania.33.t:0 "Hundreds of thousands of Leu for Public Works Misplaced"
-ww1_romania.33.d:0 "It seems prime minister Carp is not beating the incompentent allegations, as newspapers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
+ww1_romania.33.d:0 "It seems Prime minister Carp is not beating the allegations of incompetence, as newspapers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
 ww1_romania.33.a:0 "This is a total nothing burger!"
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_pro_entente_protests:0 "Pro-Entente Protesters"
@@ -5508,7 +5506,7 @@ ROM_invest_in_romania_steel_industry_desc:0 ""
 ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_military_cooperation_with_austria:0  "Military Cooperation with Austria-Hungary"
-ROM_military_cooperation_with_austria_desc:0 "Despite their oppressions of Transylvanian Romanians it would prove fruitful to seek military cooperation with the Austrians. Their time may come, or it may not, but no matter the outcome of future relations it would be prudent to extract as much benefit as we can from our current relationship."
+ROM_military_cooperation_with_austria_desc:0 "Despite their oppression of Transylvanian Romanians it would prove fruitful to seek military cooperation with the Austrians. Their time may come, or it may not, but no matter the outcome of future relations it would be prudent to extract as much benefit as we can from our current relationship."
 ROM_krupp_weapon_purchases:0 "Krupp Weapon Purchases"
 ROM_krupp_weapon_purchases_desc:0 "Krupp has a reputation for providing countries an edge over their foes that no other weapons manufacturer can match. The strongest of examples would be Prussia utilizing their rifles in order to secure total victory over their opponents in the wars to unify Germany. Our current goals are not to dissimilar to what Prussia's were, so whose to say the same solution wouldn't work for us?"
 ROM_crush_the_protesters:0 "Declare a State of Emergency"
@@ -5543,7 +5541,7 @@ ROM_embrace_revanchism_desc:0 ""
 ROM_recruitment_campaign:0 "Recruitment Campaign"
 ROM_german_support:0 "German Support"
 ROM_romanian_claims:0 "Romanian Claims"
-ROM_please_bucovina:0 "Ask For a Bukovina"
+ROM_please_bucovina:0 "Ask For Bukovina"
 ROM_secure_bulgaria:0 "Bulgarian Security"
 ROM_operation_sarbia:0 "Fall Sarbia"
 ROM_neutral:0 ""Neutrality""
@@ -5743,7 +5741,7 @@ ROM_alexandru_vaida_voevod:0 "Alexandru Vaida Voevod"
 ww1_romania.85.t:0 "Election Results of Greater Romania"
 ww1_romania.85.d:0 "Blah write it lol"
 ww1_romania.85.a:0 " "
-ww1_romania.85.b:0 "1488 victory"
+ww1_romania.85.b:0 "victory"
 ww1_romania.86.t:0 "King Ferdinand Dissolves the Government"
 ww1_romania.86.d:0 "Blah he saw the guys land reform as too radical"
 ww1_romania.86.a:0 "How dare he?"
